logs/syntax_error_2025-04-06_15-18-10.log
[SYNTAX ERROR]   File "projects/gtk_chat_client/chat_client.py", line 48
    You need to replace `"your_glade_file.glade"`, `"main_window"`, `"input_field"`, and `"display_area"` with your actual file names and object names. The OpenAI API key should be stored in an environment variable named 'OPENAI_API_KEY'.
        ^^^^
SyntaxError: invalid syntax
